--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     /* background-image: url('/images/templatemo_pagebg.jpg'); */
     background-color: #093F4A;
+    /* background-color: #010922; */
     /* background-color: rgba(117, 112, 112, 0.421); */
     background-size: cover;                          /* Ensures the image covers the entire viewport */
     background-position: center;                     /* Centers the image */
@@ -14,6 +15,13 @@ body {
     color: white;                  
     line-height: 1.6;             
         
+  }
+
+  .custom-card{
+    background-color: rgba(9, 9, 9, 0.586);
+    border: 1px solid #31D2F2;
+    border-radius: 5px;
+    box-shadow: rgb(238 240 241 / 30%) 0px 1px 2px 0px, rgb(225 231 235 / 15%) 0px 2px 6px 2px;
   }
 
   .profile-img{
