--- a/css/style.css
+++ b/css/style.css
@@ -202,8 +202,13 @@ color-mix(in srgb, var(--default-color), transparent 90%);
   position: relative;
   background-image: url('https://sciencebusiness.net/sites/default/files/styles/article/public/2021-07/ai_1050x450_0.jpg?itok=R4i1DdrR');
   background-size: cover;
+  border: 1px solid #31D2F2;
+  border-radius: 5px;
+  box-shadow: rgb(238 240 241 / 30%) 0px 1px 2px 0px, rgb(225 231 235 / 15%) 0px 2px 6px 2px;
   height: 400px;
   color: #fff; /* Text color */
+  overflow: hidden;
+
 }
 
 .section-with-bg::before {
@@ -211,6 +216,7 @@ color-mix(in srgb, var(--default-color), transparent 90%);
   position: absolute;
   top: 0;
   left: 0;
+  /* margin-left: 30px; */
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.819); /* Black overlay with 50% opacity */
@@ -220,10 +226,23 @@ color-mix(in srgb, var(--default-color), transparent 90%);
 .section-with-bg .content {
   position: relative;
   z-index: 2; /* Ensure content is above the overlay */
+  margin-left: 30px;
 }
 
 
 
 .features-list li{
   list-style: disc;
+}
+
+@media (max-width: 760px) {
+  .section-with-bg .content {
+    
+    margin-left: 0px;
+  }
+
+  .res{
+    padding: 18px;
+  }
+  
 }
